# mlff-inference

./: README-cn.md  README.md
EquiformerV2_inference/: EquiformerV2_inference_API_reference.md  EquiformerV2_inference_tasks.md  INSTALL.md  requirements-cpu.txt  requirements-gpu.txt
EquiformerV2_inference/equiformerv2-inference/: INSTALL_GUIDE.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  setup.py
EquiformerV2_inference/equiformerv2-inference/examples/: 01_single_point.py  02_structure_optimization.py  03_molecular_dynamics.py  04_phonon_calculation.py  05_bulk_modulus.py
EquiformerV2_inference/equiformerv2-inference/src/equiformerv2_inference/: __init__.py  cli.py  core.py
EquiformerV2_inference/equiformerv2-inference/src/equiformerv2_inference/tasks/: __init__.py  dynamics.py  mechanics.py  static.py
EquiformerV2_inference/equiformerv2-inference/src/equiformerv2_inference/utils/: __init__.py  device.py
EquiformerV2_inference/equiformerv2-inference/tests/: test_install.py  test_utils.py
GRACE_inference/: GRACE_inference_API_reference.md  GRACE_inference_tasks.md  INSTALL.md  requirements-cpu.txt  requirements-gpu.txt
GRACE_inference/grace-inference/: .gitignore  INSTALL_GUIDE.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  setup.py
GRACE_inference/grace-inference/examples/: 01_single_point.py  02_structure_optimization.py  03_molecular_dynamics.py  04_phonon_calculation.py  05_bulk_modulus.py
GRACE_inference/grace-inference/src/grace_inference/: __init__.py  cli.py  core.py
GRACE_inference/grace-inference/src/grace_inference/tasks/: __init__.py  adsorption.py  dynamics.py  mechanics.py  phonon.py  static.py
GRACE_inference/grace-inference/src/grace_inference/utils/: __init__.py  device.py  io.py
GRACE_inference/grace-inference/tests/: test_install.py  test_utils.py
MACE_inference/: INSTALL.md  MACE_inference_API_reference.md  MACE_inference_tasks.md  requirements-cpu.txt  requirements-gpu.txt
MACE_inference/mace-inference/: .gitignore  INSTALL_GUIDE.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml
MACE_inference/mace-inference/examples/: 01_basic_usage.py  02_molecular_dynamics.py  03_phonon_calculation.py  04_adsorption_study.py  05_high_throughput.py
MACE_inference/mace-inference/src/mace_inference/: __init__.py  cli.py  core.py
MACE_inference/mace-inference/src/mace_inference/tasks/: __init__.py  adsorption.py  dynamics.py  mechanics.py  phonon.py  static.py
MACE_inference/mace-inference/src/mace_inference/utils/: __init__.py  d3_correction.py  device.py  io.py
MACE_inference/mace-inference/tests/: test_install.py  test_utils.py
MatterSim_inference/: INSTALL.md  MatterSim_inference_API_reference.md  MatterSim_inference_tasks.md  requirements-cpu.txt  requirements-gpu.txt
MatterSim_inference/mattersim-inference/: .gitignore  INSTALL_GUIDE.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml
MatterSim_inference/mattersim-inference/examples/: 01_single_point.py  02_structure_optimization.py  03_molecular_dynamics.py  04_adsorption_study.py  05_bulk_modulus.py
MatterSim_inference/mattersim-inference/src/mattersim_inference/: __init__.py  cli.py  core.py
MatterSim_inference/mattersim-inference/src/mattersim_inference/tasks/: __init__.py  adsorption.py  dynamics.py  mechanics.py  phonon.py  static.py
MatterSim_inference/mattersim-inference/src/mattersim_inference/utils/: __init__.py  device.py  io.py
MatterSim_inference/mattersim-inference/tests/: test_install.py  test_utils.py
Orb_inference/: INSTALL.md  Orb_inference_API_reference.md  Orb_inference_tasks.md  requirements-cpu.txt  requirements-gpu.txt
Orb_inference/orb-inference/: .gitignore  INSTALL_GUIDE.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml
Orb_inference/orb-inference/examples/: 01_basic_usage.py  02_molecular_dynamics.py  03_phonon_calculation.py  04_mechanical_properties.py  05_high_throughput.py  generate_structures.py
Orb_inference/orb-inference/src/orb_inference/: __init__.py  cli.py  core.py
Orb_inference/orb-inference/src/orb_inference/tasks/: __init__.py  adsorption.py  dynamics.py  mechanics.py  phonon.py  static.py
Orb_inference/orb-inference/src/orb_inference/utils/: __init__.py  device.py  io.py
Orb_inference/orb-inference/tests/: test_install.py  test_utils.py
SevenNet_inference/: INSTALL.md  SevenNet_inference_API_reference.md  SevenNet_inference_tasks.md  requirements-cpu.txt  requirements-gpu.txt
SevenNet_inference/sevennet-inference/: .gitignore  INSTALL_GUIDE.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  setup.py
SevenNet_inference/sevennet-inference/examples/: 01_single_point.py  02_structure_optimization.py  03_molecular_dynamics.py  04_phonon_calculation.py  05_bulk_modulus.py
SevenNet_inference/sevennet-inference/src/sevennet_inference/: __init__.py  cli.py  core.py
SevenNet_inference/sevennet-inference/src/sevennet_inference/tasks/: __init__.py  phonon.py  static.py
SevenNet_inference/sevennet-inference/src/sevennet_inference/utils/: __init__.py  device.py  io.py
SevenNet_inference/sevennet-inference/tests/: test_install.py  test_utils.py
docs/: MOFSimBench_论文分析_机器学习力场与推理任务.md
eSEN_inference/: INSTALL.md  eSEN_inference_API_reference.md  eSEN_inference_tasks.md  requirements-cpu.txt  requirements-gpu.txt
eSEN_inference/esen-inference/: .gitignore  INSTALL_GUIDE.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
eSEN_inference/esen-inference/examples/: 01_basic_usage.py  02_molecular_dynamics.py  03_phonon_calculation.py  04_adsorption_study.py  05_high_throughput.py
eSEN_inference/esen-inference/src/esen_inference/: __init__.py  cli.py  core.py
eSEN_inference/esen-inference/src/esen_inference/tasks/: __init__.py  adsorption.py  dynamics.py  mechanics.py  optimization.py  phonon.py  static.py
eSEN_inference/esen-inference/src/esen_inference/utils/: __init__.py  device.py  io.py
eSEN_inference/esen-inference/tests/: test_core.py  test_install.py  test_utils.py
