[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mattersim-inference"
version = "0.1.0"
description = "MatterSim inference package for materials property calculations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<3.13"
authors = [
    {name = "Materials ML Team"}
]
keywords = [
    "materials science",
    "machine learning",
    "molecular dynamics",
    "MatterSim",
    "force field",
    "MOF",
    "adsorption"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mattersim>=1.0.0",
    "ase>=3.22.0",
    "numpy>=1.21.0,<2.0.0",
    "scipy>=1.7.0",
    "phonopy>=2.20.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "tqdm>=4.62.0",
    "pymatgen>=2023.0.0",
    "spglib>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=1.0.0",
]

[project.scripts]
mattersim-infer = "mattersim_inference.cli:main"

[project.urls]
Homepage = "https://github.com/microsoft/mattersim"
Documentation = "https://github.com/microsoft/mattersim"
Repository = "https://github.com/materials-ml/mattersim-inference"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
