[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esen-inference"
version = "1.0.0"
description = "Python inference library for eSEN (Smooth & Expressive Equivariant Networks) - MOFSimBench #1 model"
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "machine learning",
    "force field",
    "molecular dynamics",
    "MOF",
    "materials science",
    "eSEN",
    "equivariant neural networks",
    "graph neural networks",
    "FAIR-Chem",
    "MOFSimBench"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "torch>=2.0.0,<2.2.0",
    "fairchem>=1.0.0",
    "ase>=3.22.0,<3.24.0",
    "phonopy>=2.20.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pymatgen>=2023.9.0",
    "pyyaml>=6.0",
    "h5py>=3.8.0",
    "tqdm>=4.65.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0"
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "nbsphinx>=0.9.0"
]
jupyter = [
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.1.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/esen-inference"
Documentation = "https://github.com/yourusername/esen-inference/blob/main/README.md"
Repository = "https://github.com/yourusername/esen-inference"
Issues = "https://github.com/yourusername/esen-inference/issues"
Changelog = "https://github.com/yourusername/esen-inference/blob/main/CHANGELOG.md"

[project.scripts]
esen-infer = "esen_inference.cli:main"

[tool.setuptools]
packages = ["esen_inference", "esen_inference.utils", "esen_inference.tasks"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
esen_inference = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
]

[tool.coverage.run]
source = ["src/esen_inference"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
